--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ h1 {
                       align-items: center;
                       border-radius: 5px;
 }
-                      input#produkt {
+                      input#produkts {
                       height: 30px;
                       width: 200px;
                       font-size: 20px;
@@ -50,7 +50,7 @@ h1 {
                   }
                   
                   #pievienotProduktu {
-                      padding-right: ;
+                      padding-right: 20px;
                       font-size: 20px;
                       height: 30px;
                       width: 210px;
@@ -79,10 +79,27 @@ h1 {
                       margin-left: 1550px;
                       margin-top: 120px;
                       padding: 20px;
-                      border: 1px solid black;
+                      border: 2px solid black;
                       width: 11%;
                       border-radius: 5px;
                   }
-
+                  #Izvele {
+                    display: flex;
+                    flex-direction: row;
+                    flex-wrap: wrap;
+                }
+                .produkts1 {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    border: 5px solid black;
+                    border-radius: 50px;
+                    height: 120px;
+                    margin: 35px;
+                    width: 200px;
+                    padding: 10px;
+                    background-color: orange;
+                }
+                
                   
                   
